# PyStudio

./: README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx  replace_colors.js  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIChat.tsx  Console.tsx  DebuggerSidebar.tsx  Editor.tsx  FileExplorer.tsx  FileSearch.tsx  MenuBar.tsx  PackagesSidebar.tsx  Settings.tsx  SourceControlSidebar.tsx  Terminal.tsx  WelcomeScreen.tsx
src/hooks/: useGit.ts
src/lib/: id.ts
src/services/: filesystem.ts  gemini.ts  keybindings.ts  lsp.ts  pyodide.ts
