[package]
name = "pystudio"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "pystudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
dirs = "6"
walkdir = "2"
portable-pty = "0.8"
fuzzy-matcher = "0.3"
libc = "0.2"
